Дописал статью с описанием найденного решения